--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravolt/indonesia": "^0.34.0",
+        "livewire/livewire": "^3.0",
         "milon/barcode": "^10.0",
         "realrashid/sweet-alert": "^7.1"
     },
