--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
@@ -14,7 +15,8 @@
         "laravolt/indonesia": "^0.34.0",
         "livewire/livewire": "^3.0",
         "milon/barcode": "^10.0",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
